Fix logo image path

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <div class="container">
                 <div class="logo">
                     <!-- MODIFIED: Changed brand name and tagline as per requirements -->
-                    <img src="images/logo.png" alt="M² STUDIOS & EVENTS Logo" class="logo-img">
-                    <div class="logo-text">
+                            <img src="logo.png" alt="M² STUDIOS & EVENTS Logo" class="logo-img">                    <div class="logo-text">
                         <h1>M² STUDIOS & EVENTS</h1>
                         <p class="tagline">Momentz & Movementz</p>
                     </div>
