Load M2 Studios website content into GrapesJS editor

--- a/editor/index.html
+++ b/editor/index.html
@@ -6,6 +6,7 @@
     <title>M2 Studios Visual Editor</title>
     <link rel="stylesheet" href="https://unpkg.com/grapesjs/dist/css/grapes.min.css">
     <link rel="stylesheet" href="https://unpkg.com/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.css">
+    <link rel="stylesheet" href="../styles.css">
     <style>
         body, html {
             height: 100%;
@@ -28,7 +29,21 @@
     </style>
 </head>
 <body>
-    <div id="gjs"></div>
+    <div id="blocks"></div>
+    <div id="gjs">
+        <!-- M2 Studios Website Content Will Load Here -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1>M² STUDIOS & EVENTS</h1>
+                <h2>Momentz & Movementz</h2>
+                <p>A creative studio combining professional dance training and photography services under one roof.</p>
+                <div class="hero-buttons">
+                    <a href="#dance" class="btn btn-primary">Explore Dance Classes</a>
+                    <a href="#photography" class="btn btn-secondary">Explore Photography</a>
+                </div>
+            </div>
+        </section>
+    </div>
     
     <script src="https://unpkg.com/grapesjs"></script>
     <script src="https://unpkg.com/grapesjs-preset-webpage"></script>
