Add AI integration script to index.html

--- a/editor/index.html
+++ b/editor/index.html
@@ -49,5 +49,6 @@
     <script src="https://unpkg.com/grapesjs-preset-webpage"></script>
     <script src="editor.js"></script>
     <script src="github-sync.js"></script>
+        <script src="ai-integration.js"></script>
 </body>
 </html>
